Fixed jumping div

--- a/frontend/css/viewer.css
+++ b/frontend/css/viewer.css
@@ -41,7 +41,7 @@ div {
 }
 
 #data {
-    min-height: 258px;
+    min-height: 230px;
     padding-top: 0px;
     margin-top: 20px;
     margin-left: 5px;
@@ -66,13 +66,6 @@ div {
 
 #block6 {
     display: none;
-}
-
-.stats-header {
-    margin: 0px;
-    color: white;
-    text-align: center;
-    padding: 5px;
 }
 
 .stats {
